fix: added gap for paragraph in contacts

--- a/css/media-main-1370.css
+++ b/css/media-main-1370.css
@@ -224,6 +224,7 @@
     .hero--contacts div {
         display: flex;
         flex-direction: column;
+        gap: 5px;
     }
     
     .left {
